--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,11 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "gulp": "^3.9.1",
+    "gulp-mocha": "^4.3.0",
     "gulp-nodemon": "^2.2.1",
     "mongoose": "^4.9.2",
-    "mongos": "0.0.0"
+    "mongos": "0.0.0",
+    "should": "^11.2.1",
+    "sinon": "^2.1.0"
   }
 }
