--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,9 @@
     "mongos": "0.0.0",
     "should": "^11.2.1",
     "sinon": "^2.1.0"
+  },
+  "devDependencies": {
+    "gulp-env": "^0.4.0",
+    "supertest": "^3.0.0"
   }
 }
