--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "this project is for learning purposes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app/app.js",
+    "start-dev": "nodemon app/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,12 +24,13 @@
     "gulp": "^3.9.1",
     "gulp-mocha": "^4.3.0",
     "gulp-nodemon": "^2.2.1",
-    "mongoose": "^4.9.2",
+    "mongoose": ">=5.7.5",
     "mongos": "0.0.0",
     "should": "^11.2.1",
     "sinon": "^2.1.0"
   },
   "devDependencies": {
+    "nodemon": "1.18.9",
     "gulp-env": "^0.4.0",
     "supertest": "^3.0.0"
   }
